# quickstack

./: README.md  pyproject.toml
src/quickstack/: __init__.py  main.py
src/template/: copier.yml
src/template/{{project_name|lower|replace(' ', '_')}}/: .dockerignore  .env.jinja  Makefile.jinja  README.md.jinja  docker-compose.dev.yml.jinja  docker-compose.yml.jinja
src/template/{{project_name|lower|replace(' ', '_')}}/caddy/: Caddyfile.dev.jinja  Caddyfile.jinja  Dockerfile.dev
src/template/{{project_name|lower|replace(' ', '_')}}/{% if backend == 'FastAPI' %}server_fastapi{% endif %}/: Dockerfile.dev.jinja  Dockerfile.jinja  README.md  pyproject.toml.jinja
src/template/{{project_name|lower|replace(' ', '_')}}/{% if backend == 'FastAPI' %}server_fastapi{% endif %}/server/: main.py
src/template/{{project_name|lower|replace(' ', '_')}}/{% if ci == 'Github' %}.github{% endif %}/workflows/: build-and-push-caddy.yml.jinja  {% if backend == 'FastAPI' %}build-and-push-fastapi.yml{% endif %}.jinja  {% if backend == 'FastAPI' %}lint-test-server-fastapi.yml{% endif %}.jinja
